added pagination for future project when is gonna be used by a frontend
