# src/main/java/dev/pollito/post/controller/UserController.java
@@ -1,9 +1,10 @@
 package dev.pollito.post.controller;
 
 import dev.pollito.post.api.UsersApi;
-import dev.pollito.post.model.User;
+import dev.pollito.post.model.SortDirection;
+import dev.pollito.post.model.UserSortProperty;
+import dev.pollito.post.model.Users;
 import dev.pollito.post.service.UserService;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -14,7 +15,13 @@ public class UserController implements UsersApi {
   private final UserService userService;
 
   @Override
-  public ResponseEntity<List<User>> getUsers() {
-    return ResponseEntity.ok(userService.getUsers());
+  public ResponseEntity<Users> getUsers(
+      Integer pageNumber,
+      Integer pageSize,
+      UserSortProperty sortProperty,
+      SortDirection sortDirection,
+      String q) {
+    return ResponseEntity.ok(
+        userService.getUsers(pageNumber, pageSize, sortProperty, sortDirection, q));
   }
 }
